@@ -36,6 +36,8 @@ Release 1.1.3-1.1 Start 27/04/2023 End 01/01/2024
 - 10/02/2024
 16. installer.c: added 'z' option to create files with fized number of zeros.
 17. multilog.c: use unlinkat() if available instead of unlink
+- 18/02/2024
+19. multilog.c: BUG: fix wrong argument passwd to open_read() in finish()
 
 * Sun Apr 23 2023 17:05:00 +0000 Manvendra Bhangui <daemontools@indimail.org> 1.1.2-1.1%{?dist}
 Release 1.1.2-1.1 Start 20/02/2023 End 23/04/2023
